2008-02-04  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemBasicPlugin.cpp:
	* browser-plugin/totemBasicPlugin.h:
	* browser-plugin/totemComplexPlugin.cpp:
	* browser-plugin/totemComplexPlugin.h:
	* browser-plugin/totemConePlugin.cpp:
	* browser-plugin/totemConePlugin.h:
	* browser-plugin/totemGMPPlugin.cpp:
	* browser-plugin/totemGMPPlugin.h:
	* browser-plugin/totemMullYPlugin.cpp:
	* browser-plugin/totemMullYPlugin.h:
	* browser-plugin/totemNarrowSpacePlugin.cpp:
	* browser-plugin/totemNarrowSpacePlugin.h:
	* browser-plugin/totemPlugin.h:
	* browser-plugin/totemPluginGlue.cpp:
	Add a PluginLongDescription function to all the plugins,
	and return a custom description in the DivX plugin, so
	stage6.com stops complaining that we have an old version

2008-02-04  Bastien Nocera  <hadess@hadess.net>

	* src/totem-fullscreen.c: (totem_fullscreen_motion_notify),
	(totem_fullscreen_set_fullscreen),
	(totem_fullscreen_set_video_widget), (totem_fullscreen_finalize):
	Only listen to fullscreen motion_notify events when in fullscreen
	(Closes: #514091)

2008-02-04  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (totem_recent_manager_changed_callback),
	(on_movie_menu_select): Trim the list before sorting it, a tiny
	bit faster (Closes: #514090)

2008-02-01  Christian Persch  <chpe@gnome.org>

	* src/backend/debug.h: Use G_STRFUNC instead of the deprecated
	G_GNUC_PRETTY_FUNCTION.

2008-01-31  Bastien Nocera  <hadess@hadess.net>

	* src/totem-resources.c: (time_monitor):
	more typo fixing by Wouter Bron <wousser@gmail.com>
	(Closes: #513125)

2008-01-31  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/totem-python-module.c:
	(totem_python_module_finalize): Protect finalisation
	of plugins which haven't loaded properly. (Closes: #513467)

2008-01-30  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c: (save_pixbuf),
	(capture_interesting_frame), (main): Fix typos in the
	(untranslated) error messages, patch from Wouter Bron